dcj changes